--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.18",
     "motion": "^12.23.18",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "react-type-animation": "^3.2.0",
