--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
+    "react-redux": "^9.2.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.13",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.18",
     "motion": "^12.23.18",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
