--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_APP_REACT_APP_BASE_URL = "https://pathshala-backend-k9iz.onrender.com"
+VITE_APP_REACT_APP_BASE_URL = "http://localhost:3000/api/v1/"
