--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.18",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.18",
     "primereact": "^10.9.7",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "react-type-animation": "^3.2.0",
