--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_APP_REACT_APP_BASE_URL = "http://34.201.99.30:3000/api/v1"
+VITE_APP_REACT_APP_BASE_URL = "https://codesnippet-iu43.onrender.com/api/v1"
 # VITE_APP_REACT_APP_BASE_URL = "http://localhost:3000/api/v1"  
