--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-VITE_APP_REACT_APP_BASE_URL = "https://codesnippet-iu43.onrender.com/api/v1"
+# VITE_APP_REACT_APP_BASE_URL = "https://codesnippet-iu43.onrender.com/api/v1"
+VITE_APP_REACT_APP_BASE_URL = "https://pathshala-backend-k9iz.onrender.com/api/v1"
 # VITE_APP_REACT_APP_BASE_URL = "http://localhost:3000/api/v1"  
